# separate_membranes

./: .gitignore  MANIFEST.in  README.md  membrane_separator.ipynb  pyproject.toml  requirements.txt  separate_membranes_example.ipynb  setup.py  validate_membrane_separation.py  visualize_latest_results_vector.py
membrane_separator/: __init__.py  data_io.py  qp_solver.py  run_analysis.py  visualise.py
separate_membranes/: alternating_fit.py  cli.py  design_matrix.py  separate_membranes.py
