[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane_separator"
dynamic = ["version"]
description = "Membrane surface separation using height-field pair fitting with cubic polynomials"
readme = "README.md"
license = {text = "GNU"}
authors = [
    {name = "Luca Panconi"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "cvxpy>=1.2.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
membrane-separator = "membrane_separator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["membrane_separator*"]

[tool.setuptools.package-data]
membrane_separator = ["*.md", "*.txt"]
